<package>
  <name>saw_sensable_phantom_examples</name>
  <version>1.0.0</version>
  <description>
  sawSensablePhantom Examples
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawForceDimensionSDK</url>

  <build_depend>cisst</build_depend>
  <build_depend>saw_sensable_phantom</build_depend>

  <run_depend>cisst</run_depend>
  <run_depend>saw_sensable_phantom</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
