<?xml version="1.0"?>
<package>
  <name>saw_sensable_phantom_models</name>
  <description>The omni_description package</description>

  <version>1.0.0</version>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>

</package>
