<?xml version="1.0"?>
<package>
  <name>sensable_phantom_ros</name>
  <version>1.0.0</version>
  <description>The Universal Robot cisst/SAW package</description>

  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>saw_sensable_phantom</build_depend>
  <build_depend>cisst_ros_crtk</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>crtk_python_client</build_depend>

  <run_depend>saw_sensable_phantom</run_depend>
  <run_depend>cisst_ros_crtk</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>crtk_python_client</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
