<package>
  <name>saw_sensable_phantom</name>
  <version>1.0.0</version>
  <description>
  sawSensablePhantom
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawSensablePhantom</url>

  <build_depend>cisst</build_depend>
  <run_depend>cisst</run_depend>
  <build_depend>saw_controllers</build_depend>
  <run_depend>saw_controllers</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
