<?xml version="1.0"?>
<package>
  <name>saw_sensable_phantom_config</name>
  <version>1.0.0</version>
  <description>saw sensable phantom config files</description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawSensablePhantom</url>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
